# FishHashMiner

./: CMakeLists.txt  Makefile  README.md
include/: clHost.h  ironFishStratum.h
kernels/: fishhash.cl
libFishHash/: CMakeLists.txt  FishHash.cpp  Makefile  cmake_install.cmake
src/: clHost.cpp  ironFishStratum.cpp  main.cpp
